[workspace]
resolver = "3"
members = ["kitty-window", "kitty-vulkan-sys", "kitty-vulkan"]

[workspace.dependencies]
kitty-window = { path = "kitty-window", version = "0.1.0" }
kitty-vulkan = { path = "kitty-vulkan", version = "0.1.0" }
kitty-vulkan-sys = { path = "kitty-vulkan-sys", version = "0.1.0" }
bindgen = "0.72.1"
derive_more = "2.1.1"
windows = "0.62.2"
