[package]
name = "kitty-vulkan"
version = "0.1.0"
description = "High-level Vulkan wrapper for Rust."
categories = ["api-bindings", "rendering::graphics-api"]
keywords = ["vulkan", "graphics", "wrapper", "rust"]
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
kitty-vulkan-sys.workspace = true
derive_more = { features = [
    "display",
    "from",
    "into",
    "error",
], workspace = true }
